Fix promo bar display on mobile when logged in

--- a/src/scss/components/_promo-bar.scss
+++ b/src/scss/components/_promo-bar.scss
@@ -9,7 +9,6 @@
     @include specific(2) {
         @include below(lap) {
             position: absolute;
-            top: 0;
         }
     }
 
