--- a/style.css
+++ b/style.css
@@ -940,8 +940,7 @@ table {
   width: 100%; }
   @media not screen and (min-width: 1000px) {
     .promo-bar[class][class] {
-      position: absolute;
-      top: 0; } }
+      position: absolute; } }
   .admin-bar .promo-bar {
     top: 32px; }
   .demo-site .promo-bar {
